# zed

./: .rules  Cargo.toml
assets/settings/: default.json
crates/acp_thread/src/: acp_thread.rs  connection.rs
crates/agent/src/: agent.rs
crates/agent2/src/tools/: todo_list_tool.rs
crates/agent_ui/src/: message_editor.rs
crates/completion_test_cli/: Cargo.toml
crates/completion_test_cli/src/: copilot.rs  main.rs  output.rs  supermaven.rs  zed.rs
crates/copilot_v2/: Cargo.toml
crates/copilot_v2/src/: auth.rs  completion_diff_element.rs  copilotv2.rs  copilotv2_provider.rs  request.rs  sign_in.rs
crates/edit_prediction/src/: edit_prediction.rs
crates/edit_prediction_button/: Cargo.toml
crates/edit_prediction_button/src/: edit_prediction_button.rs
crates/editor/src/: editor.rs  split.rs
crates/feature_flags/src/: flags.rs
crates/language/src/: language_settings.rs
crates/language_models/src/: settings.rs
crates/language_models/src/provider/: vercel_ai_gateway.rs
crates/settings_content/src/: language_model.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs
crates/zed/src/zed/: edit_prediction_registry.rs
docs/src/ai/: llm-providers.md
research/: kimi.md  zaude.md
script/: bundle-mac
