[package]
name = "completion_test_cli"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[[bin]]
name = "completion-test"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
client.workspace = true
copilot.workspace = true
edit_prediction.workspace = true
fs.workspace = true
futures.workspace = true
gpui.workspace = true
gpui_tokio.workspace = true
language.workspace = true
lsp.workspace = true
node_runtime.workspace = true
project.workspace = true
reqwest_client.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
smol.workspace = true
supermaven.workspace = true
supermaven_api.workspace = true
text.workspace = true
util.workspace = true
zeta2 = { workspace = true, features = ["llm-response-cache"] }

